@@ -1,6 +1,6 @@
 package org.apache.bigtop.manager.common.configuration;
 
-import jakarta.annotation.Resource;
+import lombok.RequiredArgsConstructor;
 import org.apache.bigtop.manager.common.message.serializer.MessageDeserializer;
 import org.apache.bigtop.manager.common.message.serializer.MessageSerializer;
 import org.apache.commons.lang3.StringUtils;
@@ -9,17 +9,17 @@ import org.springframework.context.annotation.Configuration;
 
 
 @Configuration
+@RequiredArgsConstructor
 public class MessageConfiguration {
 
-    @Resource
-    private ApplicationConfiguration applicationConfiguration;
+    private final ApplicationConfiguration applicationConfiguration;
 
     @Bean
     public MessageSerializer messageSerializer() throws Exception {
         String serializerType = applicationConfiguration.getSerializer().getType();
         String packageName = "org.apache.bigtop.manager.common.message.serializer";
         String className = packageName + "." + StringUtils.capitalize(serializerType) + "MessageSerializer";
-        return (MessageSerializer) Class.forName(className).newInstance();
+        return (MessageSerializer) Class.forName(className).getDeclaredConstructor().newInstance();
     }
 
     @Bean
@@ -27,6 +27,6 @@ public class MessageConfiguration {
         String deserializerType = applicationConfiguration.getSerializer().getType();
         String packageName = "org.apache.bigtop.manager.common.message.serializer";
         String className = packageName + "." + StringUtils.capitalize(deserializerType) + "MessageDeserializer";
-        return (MessageDeserializer) Class.forName(className).newInstance();
+        return (MessageDeserializer) Class.forName(className).getDeclaredConstructor().newInstance();
     }
 }
